...
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/display_name"
        android:layout_width="183dp"
        android:layout_height="30dp"
        android:layout_above="@+id/addSerial"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="22dp"
        android:background="#1e1d23"
        android:fontFamily="@font/avenir_heavy"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/email_address"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profilePhoto"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="141dp"
...
