...
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="andela">Andela</string>
    <string name="resource">Resource</string>
    <string name="tracker">Tracker</string>
    <string name="menu_send_report">Report Lost Asset</string>
    <string name="menu_logout">Log Out</string>
    <string name="display_name">Andela Resource Tracker</string>
    <string name="email_address">andela.art@andela.com</string>
    <string name="title_activity_serial_entry">SerialEntry</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_title">Resource Tracker</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="full_name">Full name</string>
    <string name="email">example@gmail.com</string>
    <string name="check_serial">Check Serial</string>
    <string name="check_nfc">Scan NFC Tag</string>
    <string name="enter_text">Enter Serial</string>
    <string name="serial_hint">Serial Number</string>
    <string name="serial_settings">settings</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="okay">Okay</string>
    <string name="logout_yes">YES</string>
    <string name="logout_cancel">CANCEL</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="cohort_title">cohort</string>
    <string name="header_image">header image</string>
...
