<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mToolBar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    app:title="@string/app_title"
    app:theme="@style/AppTheme.AppBarOverlay"
    app:titleTextAppearance="@style/AppBarTitle"
    app:popupTheme="@style/ThemeOverlay.AppBarPopup"
    tools:context="com.andela.art.securitydashboard.presentation.SecurityDashboardActivity">

</android.support.v7.widget.Toolbar>

